--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User Display Name</title>
   <link rel="stylesheet" href="loginstyle.css">
 </head>
 <body>
   <h1>BitClicker</h1>
-  <form id="user-form" action="idle.html">
+  <form id="user-form">
     <label for="user-name">Enter your user-name:</label><br>
     <input type="text" id="user-name" name="user-name" required><br><br>
     <button type="submit" id="continue-btn" class="button">Continue</button>
