--- a/idle.html
+++ b/idle.html
@@ -123,6 +123,19 @@
         </div>
     </div>
 
+    <!-- Stats Menu -->
+    <div id="statsMenu" class="menu-popup">
+        <div class="menu-content">
+            <h3>Stats</h3>
+            <p>Total Clicks: <span id="totalClicks"></span></p>
+            <p>Total Rebirths: <span id="totalRebirths"></span></p>
+            <p>Total Upgrades Purchased: <span id="totalUpgrades"></span></p>
+            <p>Total Bits Obtained: <span id="totalBitsObtained"></span></p>
+            <p>Total Bits Spent: <span id="totalBitsSpent"></span></p>
+            <button id="closeStatsMenu">Close</button>
+        </div>
+    </div>
+
     <section>
         <div class="main">
             <div class="left">
