--- a/index.html
+++ b/index.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Display Name</title>
-  <link rel="stylesheet" href="loginstyle.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>User Login and Sign-Up</title>
+    <link rel="stylesheet" href="loginstyle.css">
 </head>
 <body>
-  <h1>BitClicker</h1>
-  <form id="user-form">
-    <label for="user-name">Enter your user-name:</label><br>
-    <input type="text" id="user-name" name="user-name" required><br><br>
-    <button type="submit" id="continue-btn" class="button">Continue</button>
-  </form>
-
-  <script src="loginscript.js"></script>
+    <h1>BitClicker</h1>
+    <div id="login-form">
+        <h2>Login</h2>
+        <form id="user-login-form">
+            <label for="login-username">Username:</label><br>
+            <input type="text" id="login-username" name="login-username" required><br>
+            <label for="login-password">Password:</label><br>
+            <input type="password" id="login-password" name="login-password" required><br><br>
+            <button type="submit" class="button">Login</button>
+        </form>
+    </div>
+    <div id="signup-form">
+        <h2>Sign-Up</h2>
+        <form id="user-signup-form">
+            <label for="signup-username">Username:</label><br>
+            <input type="text" id="signup-username" name="signup-username" required><br>
+            <label for="signup-password">Password:</label><br>
+            <input type="password" id="signup-password" name="signup-password" required><br><br>
+            <button type="submit" class="button">Sign-Up</button>
+        </form>
+    </div>
+    <script src="loginscript.js"></script>
 </body>
 </html>
